[#17556] Use Jupiter Assertions everywhere
* Ban JUnit 4.x, TestNG, WildFly and smallrye assertions
* Ban the assert keyword from tests
* Use assertArrayEquals wherever it makes sense
* Simplify a number of assertEquals which should be assertTrue/False
* Use assertInstanceOf where possible
* JUnit Jupiter 6.1.0